--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,14 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fluro: ^1.5.1
-  datetime_picker_formfield: ^1.0.0
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  fluro: ^1.5.1
+  connectivity: ^0.4.6+2
+  
 
 dev_dependencies:
   flutter_test:
