--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   fluro: ^1.5.1
   connectivity: ^0.4.6+2
+  image_picker: ^0.6.3+1
+  printing: ^3.0.0
   
 
 dev_dependencies:
